<resources>
    <string name="app_name">PatientTasker</string>
    <string name="nav_title_discharges">Discharges</string>
    <string name="nav_title_tasks">Tasks</string>
    <string name="nav_title_patients">Patients</string>
    <string name="mrn">MRN:</string>
    <string name="name">Name:</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="consultant">Consultant:</string>
    <string name="admission_date">Admission date:</string>
    <string name="est_dc_date">Est DC date:</string>
    <string name="dc_destination">DC destination:</string>
    <string name="notes">Notes:</string>
    <string name="dc_summ">DC summ</string>
    <string name="order_bloods">Order Bloods</string>
    <string name="send_meds">Send Meds</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discharged">Discharged</string>
    <string name="subtasks">Subtasks:</string>
    <string name="repeat">Repeat:</string>
    <string name="priority">Priority:</string>
    <string name="patient">Patient:</string>
    <string name="assign_to">Assign to:</string>
    <string name="due_date">Due date:</string>
    <string name="task_name">Task name:</string>
    <string name="completed">Completed</string>
    <string name="leave">Leave</string>
    <string name="invite">Invite</string>
    <string name="change">Change</string>
    <string name="setup">Setup</string>
    <string name="auto_logoff">Auto logoff</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="pin">Pin</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="security">Security</string>
    <string name="create_team">Create Team</string>
    <string name="join_team">Join Team</string>
    <string name="dc_summary">DC summary</string>
    <string name="all_ready">All Ready</string>
    <string name="meds_sent">Meds Sent</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_title">Confirm Delete</string>
    <string name="dialog_delete_msg">Are you sure you want to delete this?</string>
    <string name="sort_filter">Sort/Filter</string>
    <string name="settings">Settings</string>
    <string name="teams">Teams</string>
    <string name="team_management">Team Management</string>

    <string name="prompt">Select Team</string>
    <string name="webster">Webster</string>
    <string-array name="team_arrays">
        <item>Cardiology</item>
        <item>Neurology</item>
        <item>medicine</item>
    </string-array>
</resources>